--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -47,4 +47,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/pterodactyl/yolks:java_${{ matrix.tag }}
+            ghcr.io/streamversus/yolks:java_${{ matrix.tag }}
